--- a/ya_adapter_5/build.gradle
+++ b/ya_adapter_5/build.gradle
@@ -11,6 +11,7 @@ android {
         targetSdk 34
         versionCode 1
         versionName "1.0"
+        multiDexEnabled false
     }
 
     buildTypes {
